--- a/bishi/note/笔试题.md
+++ b/bishi/note/笔试题.md
@@ -130,6 +130,9 @@ Margin 边距重叠
 
 - 当一个嵌套的内部(子)函数引用了嵌套的外部(父)函数的变量(函数)时, 就产生了闭包
 
+能够访问其他函数内部变量的函数，被称为 闭包。
+闭包就是函数内部定义的函数，被返回了出去并在外部调用。
+
 常见闭包
 将函数作为另一个函数的返回值
 将函数作为实参传递给另一个函数调用
@@ -145,6 +148,11 @@ Margin 边距重叠
   2. 在函数外部能直接访问函数内部的局部变量吗? 不能, 但我们可以通过闭包让外部操作它
 -->
 
+## js 闭包应用--自定义 JS 模块
+
+具有特定功能的 js 文件
+将所有的是数据和功能都封装在一个函数体内部
+模块的使用者只需要通过模块暴露的对象调用方法来实现对应的功能
 ## undefined 与 null 的区别?
 
 - undefined 代表定义未赋值
@@ -154,12 +162,6 @@ Margin 边距重叠
 
 - 初始赋值, 表明将要赋值为对象
 - 结束前, 让对象成为垃圾对象(被垃圾回收器回收)
-
-## js 闭包应用--自定义 JS 模块
-
-具有特定功能的 js 文件
-将所有的是数据和功能都封装在一个函数体内部
-模块的使用者只需要通过模块暴露的对象调用方法来实现对应的功能
 
 ## HTML 常见的行内(块)元素
 
@@ -223,6 +225,10 @@ this 对象是在运行的时候基于函数的执行环境绑定（调用位置
 
 this 的指向在函数定义的时候是确定不了的，只有函数执行的时候才能确定 this 到底指向谁，实际上 this 的最终指向的是那个调用它的对象
 
+如果一个函数中有this，这个函数中包含多个对象，尽管这个函数是被最外层的对象所调用，this指向的也只是它上一级的对象
+
+匿名函数的执行环境具有全局性(箭头函数在定义是确定this)，因此其this对象通常指向window。
+
 new 一个实例的执行流程  
  1.创建一个新的对象  
  2.将新的对象作为函数的上下文对象（this）  
@@ -243,9 +249,16 @@ Iphone6 下： 1rpx = 1 物理像素 = 0.5px
 就是指一个系统只加载一次资源，之后的操作交互、数据交互是通过路由、ajax 来进行，页面并没有刷新。
 
 ## 箭头函数
+箭头函数的this是在定义函数的时候绑定的，而不是在执行函数的时候绑定的
 
 箭头函数没有 this
 无 new，不能当作构造函数
 无 arguments，可以通过剩余运算符获取
 没有函数提升
 不能用 call 和 apply 绑定
+
+## 变量提升与函数提升
+函数提升优先级高于变量提升，且不会被同名变量声明时覆盖，但是会被同名变量赋值后覆盖
+
+
+
