--- a/bishi/note/笔试题.md
+++ b/bishi/note/笔试题.md
@@ -133,6 +133,8 @@ Margin 边距重叠
 能够访问其他函数内部变量的函数，被称为 闭包。
 闭包就是函数内部定义的函数，被返回了出去并在外部调用。
 
+一个函数请用另一个函数作用域的变量
+
 常见闭包
 将函数作为另一个函数的返回值
 将函数作为实参传递给另一个函数调用
