--- a/bishi/note/节流防抖/节流，防抖.md
+++ b/bishi/note/节流防抖/节流，防抖.md
@@ -9,6 +9,8 @@ this.timer = null
 fn()
 用户操作频繁，把频繁的操作变为少量操作，规定时间内执行
 
+鼠标不断点击触发，mousedown(单位时间内只触发一次)
+监听滚动事件，比如是否滑到底部自动加载更多，用throttle来判断
 
 防抖
 if(this.timer) clearTimeout(timer)
@@ -17,7 +19,9 @@ fn()
 },1000)
 用户操作频繁，只执行最后一次
 
-clearTimerout(timer)清除后，timer不为null
+echart是图表，搜索框
+
+## clearTimerout(timer)清除后，timer不为null
 
 防抖
 function debounce(fn, wait, immediate) {
