--- a/bishi/note/执行上下文.md
+++ b/bishi/note/执行上下文.md
@@ -74,6 +74,7 @@
 词法作用域（Lexical Scopes）是 javascript 中使用的作用域类型
 javascript 中使用的是 “词法作用域”，因此函数作用域的范围在--函数定义--时就已经被确定，和函数在哪执行没有关系。
 
+作用：作用域最大的用处就是隔离变量，不同作用域下同名变量不会有冲突
 
 1. 区别1
   * 全局作用域之外，每个函数都会创建自己的作用域，作用域在函数定义时就已经确定了。而不是在函数调用时
